# 2d-game

./: README.md  meson.build
editor/: editor.cpp  meson.build
engine/: meson.build
engine/include/2d-eng/: die.hpp
game/: game.cpp  meson.build
libs/: meson.build
libs/glad/: glad.c  meson.build
libs/glad/include/glad/: glad.h
scripts/: build.bat  build.sh
scripts/meson/: gitignore.bat  gitignore.sh
